# kernel2

./: .gitignore  README.md  compile_flags.txt  pyproject.toml
buildtool/: .build.py.swp  build.py
docs/: datastructures.md  devices.md  memorymanagement.md
include/: debug.h  devices.h  frame.h  kio.h  mmap.h  shared.h
include/devices/: discovery.h
include/kdatastructures/: list.h
include/kstdlib/: debug.h  kio.h  list.h  maybe.h  pair.h  shared.h  string.h  testing.h
integration_tests/: test_frames.cc  test_frames.ok  test_list.cc  test_list.ok  test_malloc.cc  test_shared.cc
src/: devices.cc  discovery.cc  frame.cc  kernel_main.cc  kio.cc  kprintf.cc  linker.lds  main.c  main.cc  malloc.cc  memory.cc  mmap.cc  page_table.cc
